--- a/index.html
+++ b/index.html
@@ -41,8 +41,24 @@
             <h2 class="section-title">My Journal as a Bootcamp Student.</h2>
             <p class="section-para">After several months of learning in the Frontend Developer Career Path, I've made the big jump over the the Bootcamp to get exper code reviews of my Solo Projects and meet like-minded peers.</p>
         </section>
+
+        <section id="post-section" class="section-two">
+        </section>
+        <section id="post-section-two" class="section-two">
+        </section>
+
     </main>
 
+
+    <footer class="footer">
+        <div class="social-icon">
+            <i class="fa-brands fa-discord icon"></i>
+            <i class="fa-brands fa-facebook icon"></i>
+            <i class="fa-brands fa-instagram icon"></i>
+        </div>
+        <p class="footer-title">My Learning Journal</p>
+        <p class="copyright">Copyright © 2023</p>
+    </footer>
 
 
     <script src="/index.js"></script>
