First version of my journal

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <button aria-label="Close navigation" class="nav-close-btn">&times;</button>
             <ul class="list-item">
                 <li class="list-li"><a href="index.html" class="list-link active">HOME</a></li>
-                <li class="list-li"><a href="#" class="list-link">ABOUT ME</a></li>
+                <li class="list-li"><a href="aboutme.html" class="list-link">ABOUT ME</a></li>
             </ul>
         </nav>
     </header>
